[package]
name = "cedar-testing"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
cedar-policy = { version = "=4.1.0", path = "../cedar-policy" }
cedar-policy-core = { version = "=4.1.0", path = "../cedar-policy-core" }
cedar-policy-validator = { version = "=4.1.0", path = "../cedar-policy-validator" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
miette = { version = "7.1.0", features = ["fancy"] }

[features]
default = ["ipaddr", "decimal"]
decimal = ["cedar-policy/decimal"]
ipaddr = ["cedar-policy/ipaddr"]
integration-testing = []

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
