[package]
name = "cedar-testing"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
cedar-policy = { version = "=4.4.0", path = "../cedar-policy" }
cedar-policy-core = { version = "=4.4.0", path = "../cedar-policy-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
miette = { version = "7.6.0", features = ["fancy"] }

[features]
default = ["ipaddr", "decimal"]
decimal = ["cedar-policy/decimal"]
ipaddr = ["cedar-policy/ipaddr"]
integration-testing = []
entity-manifest = ["cedar-policy/entity-manifest"]

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"

[lints]
workspace = true
