[package]
name = "cedar-testing"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
cedar-policy = { version = "=4.8.0", path = "../cedar-policy", features = ["partial-eval", "tpe"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
miette = { version = "7.6.0", features = ["fancy"] }

[features]
default = ["ipaddr", "decimal"]
decimal = ["cedar-policy/decimal"]
ipaddr = ["cedar-policy/ipaddr"]
integration-testing = []
entity-manifest = ["cedar-policy/entity-manifest"]

[dev-dependencies]
rstest = "0.26.1"
cedar-policy-cli = { path = "../cedar-policy-cli"}
escargot = "0.5.15"
tempfile = "3"

[lints]
workspace = true
