[package]
name = "cedar-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wasm bindings and typescript types for Cedar lib"
license.workspace = true

exclude = ['/build']

[dependencies]
cedar-policy = { version = "=4.4.0", path = "../cedar-policy", features = ["wasm"] }
cedar-policy-core = { version = "=4.4.0", path = "../cedar-policy-core", features = ["wasm"] }
cedar-policy-formatter = { version = "=4.4.0", path = "../cedar-policy-formatter" }

serde = { version = "1.0", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
# wasm support
wasm-bindgen = { version = "0.2.97" }
console_error_panic_hook = { version = "0.1.6", optional = true }
tsify = "0.4.5"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
cool_asserts = "2.0"

[lints]
workspace = true
