[package]
name = "cedar-policy-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cedar-policy-core = { version = "4.0.0", path = ".." }
itertools = "0.12.1"
quote = "1.0.35"
syn = "2.0.53"

[dev-dependencies]
trybuild = "1.0"
