[package]
name = "cedar-policy-macros"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cedar-policy-core = { version = "4.0.0", path = ".." }
itertools = "0.12.1"
proc-macro-error = "1.0.4"
quote = "1.0.35"
syn = "2.0.53"
